--- a/clientside/css/style2.css
+++ b/clientside/css/style2.css
@@ -10,6 +10,7 @@ body {
 .container {
     width: 80%;
     max-width: 500px;
+    max-height: 90vh;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -29,7 +30,7 @@ label {
     font-weight: bold;
     color: rgb(8, 102, 14);
 }
-input[type="text"],input[type="number"], input[type="email"], input[type="tel"], select {
+input{
     width: 100%;
     padding: 8px;
     margin-bottom: 15px;
@@ -53,4 +54,14 @@ input[type="text"],input[type="number"], input[type="email"], input[type="tel"],
 }
 .buttons button:hover {
     background-color: rgb(4, 66, 8);
+}
+.profile{
+    height: 300px;
+    width: 300px;
+    margin: auto;
+}
+.proimg{
+    height: 100%;
+    width: 100%;
+    object-fit: fill;
 }
