--- a/clientside/css/add.css
+++ b/clientside/css/add.css
@@ -4,13 +4,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     margin: 0;
 }
 .container {
     width: 80%;
     max-width: 500px;
-    max-height: 90vh;
+    max-height: auto;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -63,5 +62,5 @@ input{
 .proimg{
     height: 100%;
     width: 100%;
-    object-fit: fill;
+    object-fit: cover;
 }
