--- a/clientside/css/index.css
+++ b/clientside/css/index.css
@@ -123,7 +123,7 @@ input[type="text"]:focus{
 .img img{
     width: 80%;
     height: 80%;
-    object-fit: fill;
+    object-fit: cover;
     display: block;
     border-radius: 50%;
 }
