--- a/clientside/css/index.css
+++ b/clientside/css/index.css
@@ -103,7 +103,7 @@ input[type="text"]:focus{
     /* height: 34rem; */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.308);
     padding: 8px 16px;
-    margin-top: 5%;
+    margin:2% 1%;
     display: flex;
     flex-direction: column;
     border-radius: 15px;
